--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,3 +75,46 @@ select.__toolbar-item {
   line-height: 33px;
 }
 
+.spinner {
+  min-height: 40px;
+}
+
+.spinner:before {
+  display: none;
+}
+
+.spinner:after {
+  top: calc(50% - 8px);
+}
+
+.jodit_container {
+  margin: 0.5rem 0 0 0;
+  padding: 1rem 0 0 0;
+  border-top: 1px solid #eff2f5;
+}
+
+.jodit_container .jodit_workplace {
+  background: #f3f7fa;
+}
+
+.jodit_container .jodit_toolbar {
+  background-color: #edf0f5;
+  border-top: 1px solid #e1e2e4;
+  border-right: 1px solid #e1e2e4;
+  border-left: 1px solid #e1e2e4;
+}
+
+.jodit_container:not(.jodit_inline) .jodit_workplace {
+  border: 1px solid #e1e2e4;
+}
+
+.editor_btn-box {
+  display: block;
+  margin: 0.5rem 0 0 0;
+}
+
+.editor_btn-box .btn {
+  font-size: 12px;
+  display: inline-block;
+}
+
