task #599: refactor commentable.js, add completed, closed pages

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,6 @@
 @import "simple-editor";
 @import "spinner";
 @import "editor";
+@import "error-indicator";
+@import "reply-to-info";
+@import "comments";
