--- a/public/css/app.css
+++ b/public/css/app.css
@@ -76,7 +76,7 @@ select.__toolbar-item {
 }
 
 .spinner {
-  min-height: 40px;
+  min-height: 18px;
 }
 
 .spinner:before {
@@ -84,7 +84,7 @@ select.__toolbar-item {
 }
 
 .spinner:after {
-  top: calc(50% - 8px);
+  top: 0;
 }
 
 .editor_btn-box {
@@ -175,5 +175,53 @@ select.__toolbar-item {
 .rich-editor-activeButton {
   color: #2f3034;
   background-color: #f3f7fa;
+}
+
+.error-indicator {
+  margin: 0.5rem 0;
+  padding: 0.5rem;
+  border: 1px solid #eff2f5;
+  border-radius: 3px;
+  background-color: #f8f9fb;
+}
+
+.error-indicator p {
+  text-align: center;
+  margin: 0;
+}
+
+.error-indicator p.boom {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.reply-to-info {
+  background-color: #ffeded;
+  padding: 0 10px;
+  line-height: 20px;
+  border-radius: 5px;
+  font-size: 0.7175rem;
+  color: #2f3034;
+  display: inline-block;
+}
+
+pre {
+  width: 100%;
+  padding: 5px;
+  overflow-y: hidden;
+  background: #eff2f5;
+  border: 1px solid #d8dbe0;
+  box-sizing: border-box;
+}
+
+pre code {
+  padding: 10px;
+}
+
+.comments-box > ul li .comment-body blockquote {
+  border-left: 5px solid #eff2f5;
+  font-style: italic;
+  margin: 16px 0;
+  padding: 10px 20px 10px 15px;
 }
 
