--- a/resources/sass/reply-to-info.scss
+++ b/resources/sass/reply-to-info.scss
@@ -1,9 +1,23 @@
-.reply-to-info {
-    background-color: #ffeded;
-    padding: 0 10px;
-    line-height: 20px;
-    border-radius: 5px;
-    font-size: .7175rem;
-    color: #2f3034;
-    display: inline-block;
+.reply-box {
+    display: flex;
+    align-items: center;
+    .reply-to-info {
+        background-color: #ffeded;
+        padding: 0 10px;
+        line-height: 20px;
+        border-radius: 5px;
+        font-size: .7175rem;
+        color: #2f3034;
+        display: inline-block;
+    }
+    .clear-reply {
+        margin: 0 0 0 2px;
+        &:hover {
+            cursor: pointer;
+        }
+        svg {
+            width: 20px;
+            height: 20px;
+        }
+    }
 }
