task #599: minify js, css

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,266 +1,1 @@
-.__editor {
-  overflow-y: auto;
-  border-radius: 0 0 5px 5px;
-  height: 210px;
-  box-sizing: border-box;
-  display: block;
-  width: 100%;
-  border: 1px solid #e1e2e4;
-  padding: 14px 10px;
-  background-color: #f3f7fa;
-}
-
-.__editor p,
-.__editor ul,
-.__editor ol {
-  margin: 0 0 8px 0;
-}
-
-.__editor:focus {
-  outline: none;
-}
-
-.__toolbar {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 5px;
-  background-color: #edf0f5;
-  border-top: 1px solid #e1e2e4;
-  border-right: 1px solid #e1e2e4;
-  border-left: 1px solid #e1e2e4;
-}
-
-.__toolbar-item {
-  background: #ffffff;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  cursor: pointer;
-  margin-right: 7px;
-  min-width: 30px;
-  padding: 5px;
-}
-
-select.__toolbar-item {
-  display: none;
-}
-
-.__toolbar-item svg {
-  fill: #2f3034;
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.__toolbar-item:hover,
-.__toolbar-item.active {
-  background: #f0f0f0;
-}
-
-.__toolbar-separator {
-  border: 1px solid #e1e2e4;
-  margin-right: 7px;
-}
-
-.__toolbar-separator:last-child {
-  display: none;
-}
-
-.info-text {
-  display: block;
-  margin: 0 0 0 0.5rem;
-  color: #6e6e6e;
-  font-size: 10px;
-  text-align: right;
-  line-height: 33px;
-}
-
-.spinner {
-  min-height: 18px;
-}
-
-.spinner:before {
-  display: none;
-}
-
-.spinner:after {
-  top: 0;
-}
-
-.editor_btn-box {
-  display: block;
-  margin: 0.5rem 0 0 0;
-}
-
-.editor_btn-box .btn {
-  font-size: 12px;
-  display: inline-block;
-}
-
-.rich-editor-root {
-  border: 1px solid #e1e2e4;
-  font-size: 14px;
-  margin: 1rem 0 0 0;
-  background-color: #f3f7fa;
-  line-height: 20px;
-}
-
-.rich-editor-root ol {
-  line-height: 20px;
-}
-
-.rich-editor-root ul {
-  line-height: 20px;
-  list-style: disc;
-}
-
-.rich-editor-root ul li {
-  margin: 0;
-}
-
-.rich-editor-editor {
-  border-top: 1px solid #e1e2e4;
-  cursor: text;
-  font-size: 14px;
-  padding: 1rem;
-}
-
-.rich-editor-editor .public-DraftEditor-content {
-  min-height: 120px;
-}
-
-.rich-editor-hidePlaceholder .public-DraftEditorPlaceholder-root {
-  display: none;
-}
-
-.rich-editor-editor .rich-editor-blockquote {
-  border-left: 5px solid #e1e2e4;
-  color: #666;
-  font-style: italic;
-  margin: 16px 0;
-  padding: 10px 20px;
-}
-
-.rich-editor-editor .public-DraftStyleDefault-pre {
-  background-color: rgba(0, 0, 0, 0.05);
-  font-size: 16px;
-  padding: 20px;
-}
-
-.toolbar {
-  background-color: #edf0f5;
-}
-
-.rich-editor-controls {
-  font-size: 14px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  display: inline-block;
-  padding: 0.5rem;
-}
-
-.rich-editor-styleButton {
-  color: #6e6e6e;
-  cursor: pointer;
-  margin-right: 4px;
-  border-radius: 3px;
-  line-height: normal;
-  padding: 2px 8px;
-  display: inline-block;
-  border: 1px solid #ddd;
-}
-
-.rich-editor-activeButton {
-  color: #2f3034;
-  background-color: #f3f7fa;
-}
-
-.error-indicator {
-  margin: 0.5rem 0;
-  padding: 0.5rem;
-  border: 1px solid #eff2f5;
-  border-radius: 3px;
-  background-color: #f8f9fb;
-}
-
-.error-indicator p {
-  text-align: center;
-  margin: 0;
-}
-
-.error-indicator p.boom {
-  font-weight: 500;
-  font-size: 16px;
-}
-
-.reply-box {
-  display: flex;
-  align-items: center;
-}
-
-.reply-box .reply-to-info {
-  background-color: #ffeded;
-  padding: 0 10px;
-  line-height: 20px;
-  border-radius: 5px;
-  font-size: 0.7175rem;
-  color: #2f3034;
-  display: inline-block;
-}
-
-.reply-box .clear-reply {
-  margin: 0 0 0 2px;
-}
-
-.reply-box .clear-reply:hover {
-  cursor: pointer;
-}
-
-.reply-box .clear-reply svg {
-  width: 20px;
-  height: 20px;
-}
-
-pre {
-  width: 100%;
-  padding: 5px;
-  overflow-y: hidden;
-  background: #eff2f5;
-  border: 1px solid #d8dbe0;
-  box-sizing: border-box;
-}
-
-pre code {
-  padding: 10px;
-}
-
-.comments-box > ul li .comment-body blockquote {
-  border-left: 5px solid #eff2f5;
-  font-style: italic;
-  margin: 16px 0;
-  padding: 10px 20px 10px 15px;
-}
-
-.is-edited {
-  position: relative;
-}
-
-.form_add-task .box {
-  position: relative;
-}
-
-#datepicker-f-started-at,
-#datepicker-f-stop-at {
-  top: 22px;
-}
-
-.filter-form .box .datepicker select {
-  width: auto;
-}
-
-.customer-add .__editor {
-  height: 180px;
-}
-
+.__editor{overflow-y:auto;border-radius:0 0 5px 5px;height:210px;box-sizing:border-box;display:block;width:100%;border:1px solid #e1e2e4;padding:14px 10px;background-color:#f3f7fa}.__editor ol,.__editor p,.__editor ul{margin:0 0 8px}.__editor:focus{outline:none}.__toolbar{display:flex;flex-wrap:wrap;padding:5px;background-color:#edf0f5;border-top:1px solid #e1e2e4;border-right:1px solid #e1e2e4;border-left:1px solid #e1e2e4}.__toolbar-item{background:#fff;border:1px solid #ddd;border-radius:3px;cursor:pointer;margin-right:7px;min-width:30px;padding:5px}select.__toolbar-item{display:none}.__toolbar-item svg{fill:#2f3034;width:16px;height:16px;display:inline-block;vertical-align:middle}.__toolbar-item.active,.__toolbar-item:hover{background:#f0f0f0}.__toolbar-separator{border:1px solid #e1e2e4;margin-right:7px}.__toolbar-separator:last-child{display:none}.info-text{display:block;margin:0 0 0 .5rem;color:#6e6e6e;font-size:10px;text-align:right;line-height:33px}.spinner{min-height:18px}.spinner:before{display:none}.spinner:after{top:0}.editor_btn-box{display:block;margin:.5rem 0 0}.editor_btn-box .btn{font-size:12px;display:inline-block}.rich-editor-root{border:1px solid #e1e2e4;font-size:14px;margin:1rem 0 0;background-color:#f3f7fa;line-height:20px}.rich-editor-root ol{line-height:20px}.rich-editor-root ul{line-height:20px;list-style:disc}.rich-editor-root ul li{margin:0}.rich-editor-editor{border-top:1px solid #e1e2e4;cursor:text;font-size:14px;padding:1rem}.rich-editor-editor .public-DraftEditor-content{min-height:120px}.rich-editor-hidePlaceholder .public-DraftEditorPlaceholder-root{display:none}.rich-editor-editor .rich-editor-blockquote{border-left:5px solid #e1e2e4;color:#666;font-style:italic;margin:16px 0;padding:10px 20px}.rich-editor-editor .public-DraftStyleDefault-pre{background-color:rgba(0,0,0,.05);font-size:16px;padding:20px}.toolbar{background-color:#edf0f5}.rich-editor-controls{font-size:14px;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;display:inline-block;padding:.5rem}.rich-editor-styleButton{color:#6e6e6e;cursor:pointer;margin-right:4px;border-radius:3px;line-height:normal;padding:2px 8px;display:inline-block;border:1px solid #ddd}.rich-editor-activeButton{color:#2f3034;background-color:#f3f7fa}.error-indicator{margin:.5rem 0;padding:.5rem;border:1px solid #eff2f5;border-radius:3px;background-color:#f8f9fb}.error-indicator p{text-align:center;margin:0}.error-indicator p.boom{font-weight:500;font-size:16px}.reply-box{display:flex;align-items:center}.reply-box .reply-to-info{background-color:#ffeded;padding:0 10px;line-height:20px;border-radius:5px;font-size:.7175rem;color:#2f3034;display:inline-block}.reply-box .clear-reply{margin:0 0 0 2px}.reply-box .clear-reply:hover{cursor:pointer}.reply-box .clear-reply svg{width:20px;height:20px}pre{width:100%;padding:5px;overflow-y:hidden;background:#eff2f5;border:1px solid #d8dbe0;box-sizing:border-box}pre code{padding:10px}.comments-box>ul li .comment-body blockquote{border-left:5px solid #eff2f5;font-style:italic;margin:16px 0;padding:10px 20px 10px 15px}.form_add-task .box,.is-edited{position:relative}#datepicker-f-started-at,#datepicker-f-stop-at{top:22px}.filter-form .box .datepicker select{width:auto}.customer-add .__editor{height:180px}
